--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,18 @@
   background-color: aliceblue;
   min-height: 100vh;
 }
+.card-x1 {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  margin: 0px 20px;
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(221, 220, 220);
+  border-radius: 20px;
+  padding: 0px;
+  height: 100%;
+  padding: 25px;
+}
+#create-task {
+  margin: 20px 0px;
+}
