--- a/src/components/badge/Badge.css
+++ b/src/components/badge/Badge.css
@@ -6,6 +6,31 @@
 .badge p {
   font-size: 14px;
   line-height: 17px;
-  color: #b9b9b9;
+  /* Color Inherit is for React, to put the colors in the function. */
+  color: inherit;
   font-weight: 700;
+}
+.grey {
+  background-color: #f2f2f2;
+  color: #808080;
+}
+
+.red {
+  background-color: #e2e2e2;
+  color: #ff0000;
+}
+
+.blue {
+  background-color: #f2f4fd;
+  color: #3754db;
+}
+
+.orange {
+  background-color: #fffdf5;
+  color: #df9a00;
+}
+
+.green {
+  background-color: #f0fff9;
+  color: #00c271;
 }
