--- a/src/components/forms/CreateTaskForms.css
+++ b/src/components/forms/CreateTaskForms.css
@@ -39,3 +39,19 @@ textarea.input-primary {
   background-blend-mode: lighten;
   background-blend-mode: darken;
 }
+p.error-message {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  color: #ff0000;
+}
+input.error,
+textarea.error {
+  border-color: #ff0000;
+  background-color: #f5deb3;
+}
+input,
+textarea {
+  outline: none;
+}
