--- a/src/components/task-viewer/TaskViewer.css
+++ b/src/components/task-viewer/TaskViewer.css
@@ -1,36 +1,27 @@
 .task-viewer-container {
+  background-color: #f3f3fb;
+  border-radius: 50px;
+  padding: 40px 0;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: self-start;
-  width: 800px;
 }
 
-.task-viewer-body {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  background-color: #293e472f;
-  border-radius: 12px;
-  margin: 0px 40px 40px 0px;
-  height: 600px;
-  width: 800px;
+.task-viewer-container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.task-list-container {
+  padding: 0 40px;
+  flex: 1;
   overflow: auto;
 }
-::-webkit-scrollbar {
-  width: 10px;
-}
 
-::-webkit-scrollbar-thumb {
-  background: rgb(168, 168, 168);
-  border-radius: 10px;
-}
-
-.task-list {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.task-list-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px);
+  grid-auto-rows: minmax(min-content, max-content);
+  justify-items: flex-start;
+  justify-content: space-between;
+  gap: 40px 50px;
 }
