--- a/src/components/control-panel/ControlPanel.css
+++ b/src/components/control-panel/ControlPanel.css
@@ -1,9 +1,5 @@
 .control-panel-container {
-  padding: 20px 0 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 100%;
+  padding: 40px;
 }
 
 .view-title {
@@ -13,4 +9,10 @@
   line-height: 38px;
   letter-spacing: -0.02em;
   color: #101c56;
+}
+
+.task-details-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
