--- a/src/components/forms/CreateTaskForms.css
+++ b/src/components/forms/CreateTaskForms.css
@@ -1,57 +1,88 @@
 .form-row {
   display: flex;
   flex-direction: column;
-  margin: 20px 0px;
+  margin: 20px 0;
 }
-.label-vd {
+
+.label-md {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 10px;
-  color: #0b0131;
+  line-height: 19px;
+  color: #2c2e3a;
 }
+
+input,
+textarea {
+  outline: none;
+}
+
 .input-primary {
-  margin: 5px 0px;
+  margin: 5px 0;
   padding: 16px;
   gap: 10px;
-  border: 1px solid #6495ed;
+  border: 1px solid #a8abbd;
   border-radius: 12px;
   font-size: 16px;
-  font-family: "Sen" sans-serif;
+  font-family: "Sen", sans-serif;
 }
+
+input.error,
+textarea.error {
+  border-color: #fb151a;
+  background-color: #fffafa;
+}
+
 textarea.input-primary {
   resize: none;
 }
-.button-primary {
-  background: rgb(112, 112, 250);
-  border-radius: 12px;
-  padding: 19px 74px;
-  font-weight: 700;
-  font-size: 16px;
-  border: none;
-  color: white;
-  line-height: 12px;
-  cursor: pointer;
-  font-family: "Sen" sans-serif;
-}
-.button-primary:hover {
-  background: linear-gradient(rgb(0, 0, 0, 0.3) 0, 0);
-  background-blend-mode: lighten;
-  background-blend-mode: darken;
-}
+
 p.error-message {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
-  color: #ff0000;
+  color: #b80020;
+  height: 14px;
 }
-input.error,
-textarea.error {
-  border-color: #ff0000;
-  background-color: #f5deb3;
+
+textarea.input-primary {
+  resize: none;
 }
-input,
-textarea {
-  outline: none;
+
+.button-primary {
+  background: #3754db;
+  border-radius: 12px;
+  padding: 19px 74px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-family: "Sen", sans-serif;
+  white-space: nowrap;
+}
+
+.button-primary:disabled {
+  opacity: 0.2;
+}
+
+.btn-sm {
+  padding: 12px 24px;
+  font-size: 14px;
+}
+
+.btn-md {
+  padding: 15px 40px;
+}
+
+.btn-xl {
+  padding: 20px 60px;
+}
+
+.button-primary:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+  background-blend-mode: lighten;
+  background-blend-mode: darken;
 }
