--- a/src/components/task-card/TaskCard.css
+++ b/src/components/task-card/TaskCard.css
@@ -1,17 +1,17 @@
-.card-wrraper {
-  width: 248px;
-  height: 170px;
-  background-color: #ffffff;
+.card-wrapper {
+  width: 250px;
+  height: 180px;
+  background: #ffffff;
   box-shadow: 0px 30px 60px rgba(32, 56, 85, 0.15);
   border-radius: 12px;
+  display: grid;
+  grid-template-rows: max-content auto max-content;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 20px;
+  gap: 15px;
 }
-.card-wrraper p {
-  margin: 0px;
+
+.card-wrapper p {
+  margin: 0;
 }
 
 .card-header {
@@ -19,15 +19,18 @@
   justify-content: space-between;
   align-items: center;
 }
-.card-header p {
+
+.card-header > p {
   font-size: 14px;
   line-height: 17px;
   color: #b9b9b9;
   font-weight: 700;
 }
+
 .card-content {
   text-align: left;
 }
+
 .card-content p {
   font-weight: 700;
   font-size: 16px;
@@ -36,9 +39,10 @@
   letter-spacing: -0.02em;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clarp: 2;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
 .card-footer {
   display: flex;
   justify-content: flex-end;
